Fix z-index problem

--- a/src/style.css
+++ b/src/style.css
@@ -70,10 +70,7 @@ th {
   text-align: center;
   background-color: whitesmoke;
   transition: transform 0.6s ease, opacity 0.6s ease;
-}
-
-.task-table {
-  z-index: 80;
+  z-index: 100;
 }
 
 .task-table.hidden,
@@ -289,7 +286,7 @@ th {
 .btns-container {
   position: fixed;
   bottom: 0;
-  z-index: 99;
+  z-index: 80;
   flex: 1 0 auto;
   padding: 25px;
   display: flex;
